--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,9 +1,23 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 1250px;
 }
 
 #greeting-container {
   margin-top: 20px;
+}
+
+#GLogo {
+    width: 20%;
+}
+
+h1 {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 400;
+}
+
+p {
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 300;
 }
