--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -21,3 +21,9 @@ p {
     font-family: 'Kumbh Sans', sans-serif;
     font-weight: 300;
 }
+
+#table_div {
+    margin-left: auto;
+  margin-right: auto;
+    width: 1250px;
+}
