--- a/src/main/webapp/styletemp.css
+++ b/src/main/webapp/styletemp.css
@@ -41,6 +41,9 @@ input:focus{
     color: white;
     position: absolute;
     top: 8px;
+    left: 22px;
+}
+
 .centered {
     color: white;
     position: absolute;
@@ -56,8 +59,7 @@ input:focus{
     left: 50%;
     transform: translate(-50%, -50%);
   }
-    transform: translate(-50%, -50%); 
-}
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
