--- a/src/main/webapp/styletemp.css
+++ b/src/main/webapp/styletemp.css
@@ -31,7 +31,7 @@ input{
     transition: border-color 0.15s, box-shadow 0.15s;
 }
 
-input:focus{
+input:required:focus{
     outline:0;
     border-color: #394032;
     box-shadow: 0 0 0 2px #394032;
