--- a/src/main/webapp/style1.css
+++ b/src/main/webapp/style1.css
@@ -1,7 +1,7 @@
 body{
-    background-color: #8DAB7F;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
+    background-color: #ccc;
+    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 400;
     
     top: 50%;
     margin-left: auto;
@@ -35,6 +35,18 @@ input:focus{
 
 label{
     display: block;
+}
+
+.top-right{
+    position: absolute;
+    top: 8px;
+    right: 22px;
+    padding: 5px;
+}
+.corner{
+    position: absolute;
+    top: 30px;
+    right: 22px;
 }
 
 .center{
