--- a/src/main/webapp/styletemp.css
+++ b/src/main/webapp/styletemp.css
@@ -1,4 +1,5 @@
 body{
+    padding: 15px;
     height: 100%;
     background-image: url(https://images.unsplash.com/photo-1606851181064-b7507b24377c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
     font-family: 'Kumbh Sans', sans-serif;
