--- a/src/main/webapp/style1.css
+++ b/src/main/webapp/style1.css
@@ -9,6 +9,17 @@ body{
     padding: 16px;
 }
 
+#myInput {
+    background-image: url('https://www.w3schools.com/css/searchicon.png'); /* Add a search icon to input */
+    background-position: 10px 12px; /* Position the search icon */
+    background-repeat: no-repeat; /* Do not repeat the icon image */
+    width: 95%; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px 20px 12px 40px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    margin-bottom: 12px; /* Add some space below the input */
+  }
+
 button{
     background-color: #394032;
     border-radius: 5px;
@@ -62,3 +73,24 @@ label{
     margin-bottom: 12px;
 }
 
+.top-left{
+    color: black;
+    position: absolute;
+    top: 8px;
+    left: 22px;
+  }
+
+  h1 {
+    margin-top: 50px;  
+  }
+
+  .google-visualization-table .gradient {
+      padding-top: 20px;
+      padding-bottom: 20px;
+      font-family: 'Kumbh Sans', sans-serif;
+
+  }
+  .google-visualization-table-th, .google-visualization-table-td {
+    font-size: 15px; /* Make Table Font Size Bigger */
+    font-family: 'Kumbh Sans', sans-serif;
+  }
