--- a/src/main/webapp/styleaboutme.css
+++ b/src/main/webapp/styleaboutme.css
@@ -1,17 +1,53 @@
-body{
+body, html {
     height: 100%;
     font-family: 'Kumbh Sans', sans-serif;
     font-weight: 400;
+    margin: 0;
+  }
+h1 {
+    padding-left: 140px;
+    padding-right: 140px;
+    padding-top: 30px;
+    font-size: 22px;
+    text-align: center;
+    font-weight: 300;
+}
+p {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-weight: 500;
+    font-size: 50px;
+}
+  .headerImage {
+    background-image: url(https://images.unsplash.com/photo-1563182693-c1c42f4c07cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+    height: 70%;
+    width: 100%;
+    margin: 0;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .centered {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -35%);
+    color: white;
+    font-size: 100px;
+    font-weight: 500;
   }
 
 .top-left{
-    color: black;
+    color: white;
     position: absolute;
     top: 8px;
     left: 22px;
   }
 .top-right{
-    color: black;
+    color: white;
     position: absolute;
     top: 8px;
     right: 22px;
@@ -21,12 +57,12 @@ body{
 
 }
   .row {
-    padding-top: 10px;
     display: -ms-flexbox; /* IE10 */
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
-    padding: 4px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   /* Create four equal columns that sits next to each other */
   .column {
@@ -41,12 +77,6 @@ body{
     margin-top: 2px;
     vertical-align: middle;
     width: 100%;
-  }
-
-  #headerImage {
-    padding: 30px;
-  text-align: center;
-  background-color: white;
   }
 
   h3{
